@@ -26,7 +26,6 @@ install: build
 	python setup.py install --prefix=/usr    --root=$(CURDIR)/debian/controlaula
 	# Remove embedded Javascript libraries:
 	ln -sf /usr/share/javascript/jquery/jquery.min.js $(JQUERYPREFIX)/jquery.min.js
-	ln -sf /usr/share/javascript/jquery-ui/jquery-ui.js $(JQUERYPREFIX)/ui/jquery-ui.custom.min.js
 	
 # Build architecture-independent files here.
 binary-indep: build install
